# batch-beatuy-editor

./: .dockerignore  .gitignore  AGENTS.md  README.md  beauty-project-plan.html  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py  files.py  persons.py  tasks.py
backend/app/core/: __init__.py  beautifier.py  config.py  detector.py  pipeline.py  recognizer.py  segmentor.py
backend/app/models/: database.py  schemas.py
backend/data/: beauty.db
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  PathSelector.tsx  Toast.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Slider.tsx
frontend/src/pages/: BatchProcess.tsx  Dashboard.tsx  Persons.tsx  Report.tsx  Review.tsx  Settings.tsx
frontend/src/services/: api.ts
frontend/src/stores/: useAppStore.ts
frontend/src/types/: index.ts
