[project]
name = "beauty-backend"
version = "0.1.0"
description = "批量指定人员美颜工具 - 后端服务"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Web Framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.1",
    "python-multipart>=0.0.9",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.1.0",

    # Database
    "aiosqlite>=0.19.0",
    "sqlalchemy[asyncio]>=2.0.27",
    "greenlet>=3.0.0",

    # Image Processing
    "opencv-python>=4.9.0.80",
    "numpy>=1.26.4",

    # Face Detection & Recognition
    "insightface>=0.7.3",
    "onnxruntime>=1.17.0",

    # Utilities
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "aiofiles>=23.2.1",
    "pillow>=10.2.0",
    "tqdm>=4.66.2",
]

[project.scripts]
beauty-server = "app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
